<resources>
    <string name="app_name">翰林派</string>
    <string name="intro_title1">专业访谈</string>
    <string name="intro_title2">公开演讲</string>
    <string name="intro_title3">现场路演</string>
    <string name="intro_title4">长期顾问</string>
    <string name="intro_desc1">快速甄选并匹配行业资深专家\n为客户提供商业决策咨询服务</string>
    <string name="intro_desc2">为客户剖析产业热点趋势\n支持战略决策创新</string>
    <string name="intro_desc3">面对面解答投资者问题\n向客户提供直接客观的建议</string>
    <string name="intro_desc4">为客户精准匹配专家\n提供持续性专家咨询服务</string>
    <string name="reg_tip_bottom">我已阅读并同意《用户注册协议》及《隐私政策》</string>
    <string name="account_login">账号登录</string>
    <string name="into">立即体验</string>
    <string name="profile">个人中心</string>
    <string name="add"></string>
    <string name="cancer">取消</string>
    <string name="reg_check">请先阅读用户注册协议</string>
    <string name="clear">清理缓存</string>
    <string name="reg_submit">提交审核</string>
    <string name="next">下一步</string>
    <string name="reset_password">重置密码</string>
    <string name="reg">注册</string>
    <string name="remind">请完成实名信息认证，以便我们更好的为您服务</string>
    <string name="login">登录</string>
    <string name="system_message">系统通知</string>
    <string name="history_order">历史订单</string>
    <string name="select_special">确认选择</string>
    <string name="forget_password">忘记密码？</string>
    <string name="my_setting">系统设置</string>
    <string name="my_share">推荐「翰林派」</string>
    <string name="change_password">修改密码</string>
    <string name="audit">信息审核中</string>
    <string name="no_att">未认证</string>
    <string name="attention_success">已认证</string>
    <string name="push">消息推送</string>
    <string name="login_out">退出登录</string>
    <string name="finish">完成</string>
    <string name="input_phone">请输入正确的手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_620">请输入6-20位的密码</string>
    <string name="set_password">请设置密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_code6">请输入6位验证码</string>
    <string name="dists">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890</string>
    <string name="input_old_password">请输入6-20位旧密码</string>
    <string name="input_new_password">请输入6-20位新密码</string>
    <string name="input_new_password2">请确认6-20位新密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="just">跳过</string>
    <string name="new_password2">确认新密码</string>
    <string name="back_again_exit">再按一次退出程序</string>
    <string name="input">请输入</string>
    <string name="select">请选择</string>
    <string name="password_shot_tip">密码不少于6位字符</string>
    <string name="password_tip">两次输入的新密码不同</string>
    <string name="about">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_tip">写下对翰林派产品的功能建议和发现的系统问题哦~</string>
    <string name="change_special_reason">请简要说明原因，以便为您推荐更合适的专家</string>
    <string name="other_reason">其他原因</string>
    <string name="business">商务合作</string>
    <string name="business_number">010-59272919</string>
    <string name="email">电子邮件</string>
    <string name="email_number">Nathanwang@chinacareer.com</string>
    <string name="service">服务协议</string>
    <string name="add_photo">添加照片</string>
    <string name="add_photo_num">限3张</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="submit">提交</string>
    <string name="avl">头像</string>
    <string name="phone">手机号</string>
    <string name="sex">性别</string>
    <string name="name">姓名</string>
    <string name="company">所在公司</string>
    <string name="position">职位</string>
    <string name="email_tip">邮箱</string>
    <string name="attestation">实名认证</string>
    <string name="editInfo">编辑资料</string>
    <string name="select_avl">请选择您的头像</string>
    <string name="select_card">请选择您的名片</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_company">请输入目前所在公司</string>
    <string name="input_position">请输入当前职位</string>
    <string name="input_email">请输入正确的邮箱</string>
    <string name="select_sex">请选择您的性别</string>
    <string name="issue">确定发布</string>
    <string name="select_specialist">选择专家</string>
    <string name="special_no_fit">以上推荐专家均不合适*</string>
    <string name="change_special_reason_tip2">请填写专家不符合的原因，以便我们为您推荐更合适的专家</string>
    <string name="change_special_reason_tip">确认专家都不符合后，系统将默认更换专家</string>
    <string name="cancer_order_reason_tip">选择取消原因，以方便我们为您更好的服务</string>
    <string name="add_order_time">下单时间：</string>
    <string name="order_no">订单编号：</string>
    <string name="guild">行业类别</string>
    <string name="select_guild">请选择行业类别</string>
    <string name="guild_tip">行业类别：</string>
    <string name="serve">服务类型</string>
    <string name="select_serve">请选择服务类型</string>
    <string name="serve_tip">服务类型：</string>
    <string name="start_time">服务日期</string>
    <string name="end_time">服务结束时间</string>
    <string name="serve_time">服务时长</string>
    <string name="select_serve_time">请选择服务时长</string>
    <string name="serve_time_tip">服务时长：</string>
    <string name="serve_date_tip">服务日期：</string>
    <string name="serve_address">服务地点</string>
    <string name="serve_address_tip">服务地点：</string>
    <string name="select_serve_address">请填写详细的服务地点</string>
    <string name="appointment_type">约见类型：</string>
    <string name="appointment_time">约见时间：</string>
    <string name="quote">报价：</string>
    <string name="describe">需求描述</string>
    <string name="evolve">订单进展</string>
    <string name="describe_tip">需求描述：</string>
    <string name="required">必填</string>
    <string name="release_order">发布订单</string>
    <string name="cancer_order">取消订单</string>
    <string name="change_order">修改订单</string>
    <string name="overdue_order">激活订单</string>
    <string name="appointment">确认约访</string>
    <string name="comfirm_change">确认修改</string>
    <string name="comfirm_overdue">确认激活</string>
    <string name="cancer_appointment">放弃约访</string>
    <string name="appointment_tip">约访信息</string>
    <string name="cancer_order_tip">请选择取消理由</string>
    <string name="no_order_to_new">您还没有订单，快去下单吧！</string>
    <string name="no_order">暂无订单</string>
    <string name="no_message">暂无消息</string>
    <string name="no_select_date">您还没有选择服务时间哦~</string>
    <string name="reg_success">注册成功！</string>
    <string name="attestation_success">恭喜您认证成功！</string>
    <string name="reg_no_attetion">您尚未实名认证,请先完善实名认证信息！</string>
    <string name="attestation_tip">科锐国际旗下领先的全球智库品牌</string>
    <string name="reg_success_tip">我们会在24小时内完成审核哦</string>
    <string name="to_new_order">去下单体验吧</string>
    <string name="to_do_rz">快速认证</string>
    <string name="affirm">确定</string>
    <string name="new_msg">新消息</string>
    <string name="affirm_new_order">确认发布</string>
    <string name="specialist">查看专家</string>
    <string name="evaluate">去评价</string>
    <string name="activate">去激活</string>
    <string name="check_evaluate">查看评价</string>
    <string name="affirm_point">服务评分</string>
    <string name="star_point">服务整体评价</string>
    <string name="star_yq">是否达到预期</string>
    <string name="status_tip_1">待接单</string>
    <string name="detail_status_tip_1">订单待接单 ></string>
    <string name="status_tip_2">已接单</string>
    <string name="status_tip_3">选专家</string>
    <string name="status_tip_4">换专家</string>
    <string name="status_tip_5">确认中</string>
    <string name="status_tip_6">请确认</string>
    <string name="status_tip_7">待进行</string>
    <string name="status_tip_8">进行中</string>
    <string name="status_tip_9">已取消</string>
    <string name="status_tip_10">请评价</string>
    <string name="status_tip_11">已完成</string>
    <string name="status_tip_12">已放弃</string>
    <string name="avl_upload_success">头像上传成功</string>
    <string name="click_fast">点击过快了~</string>
    <string name="call_customer">致电客服</string>
    <string name="online_chat">在线沟通</string>
    <string name="chat_customer">联系客服</string>
    <string name="order_info">订单信息</string>
    <string name="experts_reply">专家回复</string>
    <string name="advisory_note">顾问备注</string>
    <string name="cancer_reason">取消原因</string>
    <string name="look_evaluate">查看评价</string>
    <string name="send">发送</string>
    <string name="zwbz">暂无备注</string>
    <string name="order_desc">请详细描述您的需求或目标公司</string>
    <string name="expert_list">专家列表</string>
    <string name="edit_success">修改成功！</string>
    <string name="changeSpecial">更换专家</string>
    <string name="inconformity_expert">专家不符</string>
    <string name="affirm_expert">确认专家</string>
    <string name="select_expert_tip">确认选择该专家后，顾问将开始联系专家咯~</string>
    <string name="change_expert_reason">请简要说明下专家不符原因吧~</string>
    <string name="projectLeaderPhone">项目顾问联系方式\n</string>
    <string name="giveUpAppointment">是否放弃约访？</string>
    <string name="changeExpert">是否确认更换专家，确认后顾问将继续推荐别的专家？</string>
    <string name="comfirmAppointment">是否确认约访？</string>
    <string name="custom_cancer">顾问取消</string>
    <string name="feedback_content">内容应该包含至少10个字符。</string>
    <string name="share_title">「专家报告」大数据行业专家</string>
    <string name="share_content">翰林派-科锐国际旗下领先的全球智库品牌</string>
    <string name="share_title2">翰林派-科锐国际旗下领先的全球智库品牌</string>
    <string name="share_content2">21年人资服务领域积淀*79家全球服务分支机构*400万高质活跃专家资源，实时更新</string>
    <string name="select_date_til">您已经选择以下服务时间</string>
    <string name="cancer_order_wait">已申请取消订单</string>
    <string name="affirm_server_type_tip">请确定服务类型</string>
    <string name="inconformity">不符合</string>
    <string name="select2">选择</string>
    <string name="expert_no_server">请选择服务类型</string>
    <string name="expert_no_yj">请选择约见时间</string>
    <string name="expert_list_tip">温馨提示：请您选择专家前确认最终服务类型</string>
    <string name="exit_order_cancer">您已申请取消该订单，撤销后可继续进行该订单</string>
    <string name="date_pass">时间已过期</string>
    <string name="recommend_history_tip">推荐历史</string>
    <string name="expert_bfh_tip">不符合：专家背景资历达不到要求</string>
</resources>
