<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/r_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/layout_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                style="@style/Title_second"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:gravity="center"
                android:text="@string/old_password" />

            <EditText
                android:id="@+id/old_password"
                style="@style/Title_second"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:digits="@string/dists"
                android:gravity="center|right"
                android:inputType="textPassword"
                android:hint="@string/input"
                android:maxLength="20" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/driver"></View>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                style="@style/Title_second"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:gravity="center"
                android:text="@string/new_password" />

            <EditText
                android:id="@+id/new_password"
                style="@style/Title_second"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:digits="@string/dists"
                android:gravity="center|right"
                android:inputType="textPassword"
                android:hint="@string/input"
                android:maxLength="20" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/driver"></View>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                style="@style/Title_second"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:gravity="center"
                android:text="@string/new_password2" />

            <EditText
                android:id="@+id/comfirm_password"
                style="@style/Title_second"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:digits="@string/dists"
                android:gravity="center|right"
                android:hint="@string/input"
                android:inputType="textPassword"
                android:maxLength="20" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/driver"></View>
        </RelativeLayout>
        <Button
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_select"
            android:gravity="center"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>



