<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/image04" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/intro_title4"
        android:textColor="@color/firstColor"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/intro_desc4"
        android:textColor="@color/firstColor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/into"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_select"
        android:gravity="center"
        android:onClick="into"
        android:text="@string/into"
        android:textColor="@color/white"
        android:textSize="14sp" />
</RelativeLayout>

</RelativeLayout>
