<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/r_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <include layout="@layout/layout_title"></include>

        <EditText
            android:id="@+id/content"
            style="@style/Title_second"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            android:gravity="left"
            android:maxLength="200"
            android:hint="@string/feedback_tip"
            android:padding="15dp"
            android:textColorHint="@color/thirdColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawablePadding="5dp"
                android:text="@string/add_photo"
                android:textColor="@color/secondColor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                android:text="@string/add_photo_num"
                android:textColor="@color/thirdColor"
                android:textSize="12sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/driver"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/photo_recycleView"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"></android.support.v7.widget.RecyclerView>


            </RelativeLayout>
        </LinearLayout>


        <Button
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_select"
            android:gravity="center"
            android:text="@string/submit_feedback"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


</RelativeLayout>
