<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/r_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_title"></include>

        <TextView
            android:id="@+id/change_special_reason_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:lineSpacingExtra="3dp"
            android:padding="15dp"
            android:textColor="@color/secondColor"
            android:textSize="16sp"
            android:text="@string/change_special_reason_tip" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/content"
                style="@style/Title_second"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_gray_edit"
                android:gravity="left"
                android:hint="@string/change_special_reason_tip2"
                android:maxLength="150"
                android:padding="15dp"
                android:textColorHint="@color/thirdColor" />

            <TextView
                android:id="@+id/text_number_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/150"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="bottom|right" />
        </FrameLayout>


        <Button
            android:id="@+id/change_special"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_select"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


</RelativeLayout>
