<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/r_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!--<pl.droidsonroids.gif.GifImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:src="@drawable/gif" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <include
            android:id="@+id/top"
            layout="@layout/layout_title"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/top">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/name"
                style="@style/Title_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/vesion"
                style="@style/Title_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="v1.0"
                android:textColor="@color/thirdColor" />
        </RelativeLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/r_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/business"
                    android:textColor="@color/secondColor"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:text="@string/business_number"
                    android:textColor="@color/secondColor"
                    android:textSize="14sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/driver"></View>

            <RelativeLayout
                android:id="@+id/r_eamil"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/secondColor"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:text="@string/email_number"
                    android:textColor="@color/secondColor"
                    android:textSize="14sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/driver"></View>

            <RelativeLayout
                android:id="@+id/r_agreement"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/service"
                    android:textColor="@color/secondColor"
                    android:textSize="14sp" />


                <ImageView
                    android:id="@+id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/icon_enter" />
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>

