<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/r_top"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:drawableLeft="@mipmap/icon_phone"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:hint="@string/input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/secondColor"
                android:textColorHint="@color/thirdColor"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@color/driver" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:drawableLeft="@mipmap/icon_password"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="@color/secondColor"
                    android:textColorHint="@color/thirdColor"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@color/driver" />
            <TextView
                android:id="@+id/forget_password"
                style="@style/Title_second"
                android:layout_marginRight="20dp"
                android:gravity="center|right"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_height="50dp"
                android:textColor="@color/colorAccent"
                android:text="@string/forget_password" />
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_select"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>



    </LinearLayout>
</RelativeLayout>



